[gd_scene load_steps=17 format=3 uid="uid://dkl3tuvaa4upn"]

[ext_resource type="Script" path="res://scripts/character_creation.gd" id="1_pdy0p"]
[ext_resource type="Theme" uid="uid://dibhwi1n0b2i3" path="res://resources/ui_1_theme.tres" id="2_dip12"]
[ext_resource type="Texture2D" uid="uid://cg6pfyawnykyk" path="res://assets/opening/Copy of Website SERASI 2025.png" id="2_gk481"]
[ext_resource type="Script" path="res://scripts/kelas_pick.gd" id="3_1oi3g"]
[ext_resource type="Texture2D" uid="uid://dj5pn4if4w54i" path="res://assets/s9/cloud.png" id="3_u5801"]
[ext_resource type="Script" path="res://scenes/cloud.gd" id="4_3t2ma"]
[ext_resource type="PackedScene" uid="uid://chxju6pnvq85e" path="res://scenes/scene_transition_animation.tscn" id="5_uum3a"]
[ext_resource type="Script" path="res://addons/Godot-Onscreen-Keyboard-0bc9a151e15c4c7482e55d07368476390f88beba/addons/onscreenkeyboard/onscreen_keyboard.gd" id="6_6xu2y"]
[ext_resource type="Texture2D" uid="uid://c2bf0rt30likg" path="res://assets/s9/aspire.png" id="6_ojvio"]
[ext_resource type="StyleBox" uid="uid://udqm5bs5wtbp" path="res://resources/aspire.tres" id="7_7qmlo"]
[ext_resource type="FontFile" uid="uid://2qeldosicygg" path="res://assets/Fonts/GrapeSoda.ttf" id="7_435qb"]
[ext_resource type="Texture2D" uid="uid://bjv55r4i4rwf0" path="res://assets/onscreen controls/lineLight19.png" id="8_acbpw"]
[ext_resource type="StyleBox" uid="uid://d4egllwgfnjtl" path="res://resources/serren.tres" id="8_ecvka"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pfaoi"]
texture = ExtResource("2_gk481")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaqjf"]
bg_color = Color(0.517647, 0.172549, 0.172549, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pd0cr"]
texture = ExtResource("6_ojvio")

[node name="Character Creation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pdy0p")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pfaoi")

[node name="Cloud" type="Sprite2D" parent="."]
position = Vector2(161, 203)
scale = Vector2(0.415064, 0.415064)
texture = ExtResource("3_u5801")
script = ExtResource("4_3t2ma")

[node name="Cloud2" type="Sprite2D" parent="."]
position = Vector2(1123, 138)
scale = Vector2(0.300481, 0.300481)
texture = ExtResource("3_u5801")
script = ExtResource("4_3t2ma")

[node name="Watermark" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 257.0
grow_vertical = 0
theme_override_constants/margin_left = 12
theme_override_constants/margin_bottom = 12

[node name="LinkButton" type="LinkButton" parent="Watermark"]
layout_mode = 2
theme = ExtResource("2_dip12")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 36
text = "@ghaisanghaisan"
underline = 1
uri = "https://github.com/ghaisanghaisan"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -524.0
offset_top = -245.0
offset_right = 524.0
offset_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yaqjf")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Avatar" type="Control" parent="Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="gambar" type="Panel" parent="Panel2/HBoxContainer/Avatar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -233.0
offset_right = 173.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pd0cr")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/HBoxContainer/Avatar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 149.0
offset_top = -79.0
offset_right = -149.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12
alignment = 1

[node name="Aspire" type="Button" parent="Panel2/HBoxContainer/Avatar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Panel2/HBoxContainer/Avatar/HBoxContainer/Aspire"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -30.0
offset_right = 22.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("7_7qmlo")

[node name="Serren" type="Button" parent="Panel2/HBoxContainer/Avatar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Panel2/HBoxContainer/Avatar/HBoxContainer/Serren"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -30.0
offset_right = 22.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("8_ecvka")

[node name="MarginContainer" type="MarginContainer" parent="Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Fields" type="VBoxContainer" parent="Panel2/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 36

[node name="Nama Lengkap" type="VBoxContainer" parent="Panel2/HBoxContainer/MarginContainer/Fields"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/HBoxContainer/MarginContainer/Fields/Nama Lengkap"]
layout_mode = 2
theme = ExtResource("2_dip12")
theme_override_font_sizes/font_size = 48
text = "Nama Lengkap"

[node name="LineEdit" type="LineEdit" parent="Panel2/HBoxContainer/MarginContainer/Fields/Nama Lengkap"]
layout_mode = 2
theme = ExtResource("2_dip12")
theme_override_font_sizes/font_size = 36
placeholder_text = "Tulis nama lengkapmu"

[node name="Nama Panggilan" type="VBoxContainer" parent="Panel2/HBoxContainer/MarginContainer/Fields"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/HBoxContainer/MarginContainer/Fields/Nama Panggilan"]
layout_mode = 2
theme = ExtResource("2_dip12")
theme_override_font_sizes/font_size = 48
text = "Nama Panggilan"

[node name="LineEdit" type="LineEdit" parent="Panel2/HBoxContainer/MarginContainer/Fields/Nama Panggilan"]
layout_mode = 2
theme = ExtResource("2_dip12")
theme_override_font_sizes/font_size = 36
placeholder_text = "Tulis nama panggilanmu"
max_length = 8

[node name="Kelas" type="VBoxContainer" parent="Panel2/HBoxContainer/MarginContainer/Fields"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/HBoxContainer/MarginContainer/Fields/Kelas"]
layout_mode = 2
theme = ExtResource("2_dip12")
theme_override_font_sizes/font_size = 48
text = "Kelas
"

[node name="Kelas Pick" type="OptionButton" parent="Panel2/HBoxContainer/MarginContainer/Fields/Kelas"]
layout_mode = 2
theme = ExtResource("2_dip12")
theme_override_font_sizes/font_size = 36
selected = 0
item_count = 1
popup/item_0/text = "Pilih Kelas mu!"
popup/item_0/disabled = true
script = ExtResource("3_1oi3g")

[node name="Submit" type="Button" parent="Panel2/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_dip12")
theme_override_font_sizes/font_size = 36
text = "Mulai Bermain!"

[node name="Back Btn" type="Button" parent="Panel2"]
layout_mode = 1
offset_left = 73.0
offset_top = 14.0
offset_right = 129.0
offset_bottom = 70.0
scale = Vector2(-1, 1)
icon = ExtResource("8_acbpw")

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("5_uum3a")]

[node name="OnscreenKeyboard" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -244.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_6xu2y")
font = ExtResource("7_435qb")
font_size = 36

[connection signal="pressed" from="Panel2/HBoxContainer/Avatar/HBoxContainer/Aspire" to="." method="_on_aspire_pressed"]
[connection signal="pressed" from="Panel2/HBoxContainer/Avatar/HBoxContainer/Serren" to="." method="_on_serren_pressed"]
[connection signal="pressed" from="Panel2/HBoxContainer/MarginContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="button_down" from="Panel2/Back Btn" to="." method="_on_back_btn_button_down"]
